5415.	[test]		Address race in dnssec system test that led to
			test failures. [GL #1852]

5414.	[test]		Adjust time allowed for journal truncation to occur
			in nsupdate system test to avoid test failure.
			[GL #1855]

5413.	[test]		Address race in autosign system test that led to
			test failures. [GL #1852]

5412.	[bug]		'provide-ixfr no;' fail to return up-to-date responses
			when the serial was greater than or equal to the
			current serial. [GL #1714]

5411.	[cleanup]	Refactoring of TCP accept code to use a single accept()
			and pass the accepted socket to child threads for
			processing. [GL !3320]

5410.	[func]		Add the ability to specify per-type record count
			limits in an "update-policy" statement, which
			are enforced when adding records via UPDATE.
			[GL #1657]

5409.	[performance]	When looking up NSEC3 data in a zone database, skip
			the check for empty non-terminal nodes; the NSEC3
			tree doesn't have any. [GL #1834]

5408.	[protocol]	Print Extended DNS Errors if present in OPT record.
			[GL #1835]

5407.	[func]		Zone timers are now exported via statistics channel.
			Thanks to Paul Frieden, Verizon Media. [GL #1232]

5406.	[func]		Added a new logging category, "rpz-passthru". It allows
			RPZ passthru actions to be logged into a separate
			channel. [GL #54]

5405.	[bug]		'named-checkconf -p' could include spurious text
			in server-addresses statements due to an uninitialized
			DSCP value. [GL #1812]

5404.	[bug]		'named-checkconf -z' could incorrectly indicate
			success if errors were found in one view but not in a
			subsequent one. [GL #1807]

5403.	[func]		Do not set UDP receive/send buffer sizes - use system
			defaults. [GL #1713]

5402.	[bug]		On FreeBSD, use SO_REUSEPORT_LB instead of SO_REUSEPORT.
			Enable use of SO_REUSEADDR on all platforms which
			support it. [GL !3365]

5401.	[bug]		The number of input queues allocated during dnstap
			initialization was too low, which could prevent some