@@ -1,3 +1,5 @@
+5416.	[bug]		Fix a lock order inversion in unix/socket.c. [GL #1859]
+
 5415.	[test]		Address race in dnssec system test that led to
 			test failures. [GL #1852]
 
